--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": " Contact manager",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js"
+    "start": "babel-node index.js",
+    "dev:start": "clear; nodemon --exec babel-node index.js"
   },
   "keywords": [],
   "author": "Mohamed MARDHI",
@@ -19,6 +19,10 @@
     "mongoose": "^5.12.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/node": "^7.13.13",
+    "@babel/preset-env": "^7.13.15",
+    "babel-loader": "^8.2.2",
     "concurrently": "^6.0.0",
     "nodemon": "^2.0.7"
   }
