--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,12 @@ bower_components
 build/Release
 
 # Dependency directories
+front/node_modules/
 node_modules/
 jspm_packages/
+
+# Config 
+config/
 
 # TypeScript v1 declaration files
 typings/
@@ -103,5 +107,3 @@ dist
 # TernJS port file
 .tern-port
 
-# Config 
-config/default.json
