adding proxy to deal with backend and finish first comp Navbar

--- a/.gitignore
+++ b/.gitignore
@@ -41,9 +41,7 @@ build/Release
 front/node_modules/
 node_modules/
 jspm_packages/
-
-# Config 
-config/
+config/default.json
 
 # TypeScript v1 declaration files
 typings/
